--- a/Brandshop/style.css
+++ b/Brandshop/style.css
@@ -1,7 +1,8 @@
-@import url(https://www.myfonts.com/collections/neue-helvetica-font-linotype);
+@import url(https://www.cssfontstack.com/Helvetica);
 body{
     background-color: rgb(27, 82, 81);
     box-sizing: border-box;
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 .flex-container{
     display: flex;
