--- a/Brandshop/style.css
+++ b/Brandshop/style.css
@@ -1,8 +1,9 @@
 @import url(https://www.cssfontstack.com/Helvetica);
 body{
-    background-color: rgb(27, 82, 81);
+    background-color: rgb(255, 255, 255);
     box-sizing: border-box;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    color: rgb(250, 242, 242);
 }
 .flex-container{
     display: flex;
@@ -13,7 +14,7 @@ body{
     padding: 0;
 }
 header{
-    background-color: rgb(251, 255, 0);
+    background-color: rgb(201, 201, 201);
     padding: 1rem;
 }
 header nav li{
