--- a/Brandshop/style.css
+++ b/Brandshop/style.css
@@ -17,7 +17,7 @@ header{
     background-color: rgb(201, 201, 201);
     padding: 1rem;
 }
-header nav li{
+header nav li, nav li a{
     display: inline-block;
     color: rgb(255, 255, 255);
 }
