--- a/Brandshop/style.css
+++ b/Brandshop/style.css
@@ -20,6 +20,7 @@ header{
 header nav li, nav li a{
     display: inline-block;
     color: rgb(255, 255, 255);
+    text-decoration: none;
 }
 img{
     width: 50px
