--- a/Brandshop/style.css
+++ b/Brandshop/style.css
@@ -3,7 +3,7 @@ body{
     background-color: rgb(255, 255, 255);
     box-sizing: border-box;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
-    color: rgb(116, 116, 116);
+    color: rgb(0, 0, 0);
 }
 .flex-container{
     display: flex;
@@ -39,5 +39,16 @@ header input{
 #herobanner{
     background-color: white;
     margin: 1rem;
+    padding: 2rem;
     text-align: center;
 }
+.videoframe {
+    overflow: hidden;
+    max-height: 50vh;
+  }
+  video {
+    width: 100%;
+  }
+  #trending{
+    flex: content;
+  }
