--- a/Brandshop/style.css
+++ b/Brandshop/style.css
@@ -65,17 +65,18 @@ video {
     flex: content;
     padding: 1rem;
     margin: 1rem;
-    margin-top: -9rem; 
+    margin-top: -8rem; 
   }
 main flex-container{
     display: flex;
     justify-content: space-between;
-    gap: 2rem;
-    width: 200px;
-}
-main flex-item {
-    flex: 1;
+    gap: 1rem;
+    align-items: start;
+    flex-direction: row;
+    flex-flow: row wrap;
+    width: 50px;
+
 }
 main img {
-    width: 100%;
+    width: 50%;
 }
