--- a/Brandshop/style.css
+++ b/Brandshop/style.css
@@ -126,3 +126,12 @@ button{
     padding: 1rem;
     margin: 1rem;
 }
+.info{
+    font-size: 10pt;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    font-weight: 900;
+    background-color: black;
+    color: aqua;
+}
