--- a/bandsite/style.css
+++ b/bandsite/style.css
@@ -2,21 +2,26 @@
         font-family: Alphabetized Cassette Tapes;
         src: url(alphabetized_cassette_tapes/Alphabetized\ Cassette\ Tapes.ttf);
 }
+
 @font-face {
         font-family: devil breeze;
         src: url(devil-breeze/Devil\ Breeze\ Medium.ttf);
 }
+
 @font-face {
         font-family: el messiri;
         src: url(El_Messiri/ElMessiri-Regular.ttf);
 }
+
 html {
         margin-top: 0px;
         margin: 0px;
 }
-nav{
+
+nav {
         text-align: center;
 }
+
 nav ul {
         list-style-type: none;
         margin: 0;
@@ -25,10 +30,12 @@ nav ul {
         background-color: rgb(0, 0, 0);
         text-align: center;
 }
+
 nav li {
         float: left;
         margin: auto;
 }
+
 nav li a {
         font-family: Alphabetized Cassette Tapes;
         font-size: 180%;
@@ -38,6 +45,7 @@ nav li a {
         padding: 14px 16px;
         text-decoration: none;
 }
+
 nav li a:hover {
         --h: 2em;
         /* the height */
@@ -51,8 +59,9 @@ nav li a:hover {
                 linear-gradient(#00bfff 0 0) bottom/100% var(--_d, 0) no-repeat;
         transition: 2s;
 }
-body{
-        font-family:El Messiri;
+
+body {
+        font-family: El Messiri;
         font-size: 15px;
         font-style: normal;
         font-weight: 400;
@@ -63,7 +72,8 @@ body{
         margin-bottom: 1px;
         margin-left: 50px;
 }
-h2{
+
+h2 {
         font-family: devil breeze;
         font-size: 50px;
         font-style: normal;
@@ -71,9 +81,10 @@ h2{
         letter-spacing: normal;
         text-align: left;
         margin-bottom: 5px;
-        background-color: #df4540 ;
+        background-color: #df4540;
 }
-h3{
+
+h3 {
         font-family: Devil Breeze;
         font-size: 20px;
         font-style: normal;
@@ -86,7 +97,8 @@ h3{
         margin: auto;
         list-style: none;
 }
-h4{
+
+h4 {
         font-family: Devil Breeze;
         font-size: 20px;
         font-style: normal;
@@ -100,7 +112,8 @@ h4{
         margin: auto;
         list-style: none;
 }
-h5{
+
+h5 {
         font-family: Devil Breeze;
         font-size: 15px;
         font-style: normal;
@@ -108,9 +121,10 @@ h5{
         letter-spacing: normal;
         color: #000000;
         text-align: left;
-        margin-bottom: 5px; 
+        margin-bottom: 5px;
         background-color: #6f69ae;
 }
+
 .title {
         font-family: devil breeze;
         font-size: 100px;
@@ -123,26 +137,31 @@ h5{
         line-height: 1.3;
         padding: 20%;
 }
+
 .logo {
         display: block;
         margin: auto;
         margin-top: -36%;
         margin-bottom: -6.5%;
-        align-items: center;  
+        align-items: center;
 }
-.Informatie{
+
+.Informatie {
         background-color: #df4540;
         color: #000000;
 }
-.oud-leden{
+
+.oud-leden {
         color: #000000;
         background-color: #90d1df;
 }
-.Biografie{
+
+.Biografie {
         background-color: #df4540;
         color: #000000;
 }
-.leden-van-het-heden-tekst{
+
+.leden-van-het-heden-tekst {
         background-color: #000000;
         color: #90d1df;
         font-family: El Messiri;
@@ -151,12 +170,14 @@ h5{
         text-align: center;
         margin: auto;
 }
-.pic-leden{
+
+.pic-leden {
         display: block;
-  margin-left: auto;
-  margin-right: auto;
+        margin-left: auto;
+        margin-right: auto;
 }
-.Albums{
+
+.Albums {
         font-family: El Messiri;
         font-size: 15px;
         font-style: normal;
@@ -165,17 +186,22 @@ h5{
         color: #000000;
         text-align: left;
         margin-bottom: 1px;
+        flex-direction: row;
 }
-#discografie{
+
+#discografie {
         width: 400px;
+        flex-direction: row;
 }
-.img1{
+
+.img1 {
         width: 50vw;
         width: 360px;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-between;flex-direction: row;
 }
-.night_visions{
+
+.night_visions {
         font-family: El Messiri;
         font-size: 15px;
         font-style: normal;
@@ -184,8 +210,11 @@ h5{
         color: #000000;
         text-align: left;
         margin-bottom: 1px;
+        display: flex;
+        justify-content: space-between;flex-direction: row;
 }
-.smoke_mirrors{
+
+.smoke_mirrors {
         font-family: El Messiri;
         font-size: 15px;
         font-style: normal;
@@ -194,8 +223,11 @@ h5{
         color: #000000;
         text-align: left;
         margin-bottom: 1px;
+        display: flex;
+        justify-content: space-between;flex-direction: row;
 }
-.evolve{
+
+.evolve {
         font-family: El Messiri;
         font-size: 15px;
         font-style: normal;
@@ -206,7 +238,8 @@ h5{
         margin-bottom: 1px;
         width: 400px;
 }
-.origins{
+
+.origins {
         font-family: El Messiri;
         font-size: 15px;
         font-style: normal;
@@ -216,7 +249,8 @@ h5{
         text-align: left;
         margin-bottom: 1px;
 }
-.mercury1{
+
+.mercury1 {
         font-family: El Messiri;
         font-size: 15px;
         font-style: normal;
@@ -226,7 +260,8 @@ h5{
         text-align: left;
         margin-bottom: 1px;
 }
-.mercury2{
+
+.mercury2 {
         font-family: El Messiri;
         font-size: 15px;
         font-style: normal;
@@ -236,7 +271,8 @@ h5{
         text-align: left;
         margin-bottom: 1px;
 }
-.night_visions_anniversary{
+
+.night_visions_anniversary {
         font-family: El Messiri;
         font-size: 15px;
         font-style: normal;
@@ -246,7 +282,8 @@ h5{
         text-align: left;
         margin-bottom: 1px;
 }
-.top{
+
+.top {
         list-style-type: none;
         margin: 0;
         padding: 0;
@@ -261,7 +298,9 @@ h5{
         padding: 14px 16px;
         text-decoration: none;
 }
-.top :hover{  --h: 2em;
+
+.top :hover {
+        --h: 2em;
         /* the height */
         line-height: var(---h);
         color: rgb(255, 0, 0);
@@ -273,6 +312,7 @@ h5{
                 linear-gradient(#00bfff 0 0) bottom/100% var(--_d, 0) no-repeat;
         transition: 2s;
 }
+
 footer {
         font-size: 25px;
         font-style: normal;
@@ -282,20 +322,24 @@ footer {
         text-align: left;
         margin-bottom: 5px;
 }
+
 footer ul {
         font-family: Alphabetized Cassette Tapes;
         list-style: none;
 }
-.website{
+
+.website {
         font-family: Alphabetized Cassette Tapes;
         background-color: #000000;
         color: #6f69ae;
         text-align: left;
         margin-bottom: 5px;
 }
-#twitter{
+
+#twitter {
         color: #00bfff;
 }
-.footer{
+
+.footer {
         color: #6f69ae;
 }
