--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     src: url(alphabetized_cassette_tapes/Alphabetized\ Cassette\ Tapes.ttf);
 }
 @font-face {
-    font-family: ElMessiri-Regular;
+    font-family: El Messiri;
     src: url(El_Messiri/static/ElMessiri-Regular.ttf);
 }
 html{
