--- a/style.css
+++ b/style.css
@@ -40,31 +40,31 @@ a{
     font-size: 16px;
 }
 .artikel:hover{
-    color: #0000c4;
+    color: #000094;
     border-color: #149900;
     border-width: 2px;
     border-style: dashed;
 }
 .matchapp:hover{
-    color: #0000c4;
+    color: #000094;
     border-color: #149900;
     border-width: 2px;
     border-style: dashed;
 }
 .bandsite:hover{
-    color: #0000c4;
+    color: #000094;
     border-color: #149900;
     border-width: 2px;
     border-style: dashed;
 }
 .brandshop:hover{
-    color: #0000c4;
+    color: #000094;
     border-color: #149900;
     border-width: 2px;
     border-style: dashed;
 }
 .andere:hover{
-    color: #0000c4;
+    color: #000094;
     border-color: #149900;
     border-width: 2px;
     border-style: dashed;
