--- a/Brandshop/style.css
+++ b/Brandshop/style.css
@@ -60,12 +60,12 @@ header input {
 
 /* hier begint de main*/
 h2 {
-    font-size: 18pt;
+    font-size: 180%;
     font-weight: 600;
 }
 
 h3 {
-    font-size: 10pt;
+    font-size: 100%;
 }
 
 #herobanner {
@@ -156,8 +156,10 @@ button {
 
 footer {
     padding: 5vw 10vw;
-    background-color: #000000;
+    background-image: ;
     color: #666;
+    font-size: 10px;
+    justify-content: space-between;
 }
 
 footer .flex-container:first-child {
@@ -199,8 +201,7 @@ footer .icons:hover {
 
 
 footer {
-    font-size: 10px;
-    justify-content: space-between;
+    background-image: ;
 
 }
 
@@ -209,7 +210,7 @@ footer {
     padding: 20px;
     margin-left: 300px;
     margin-right: -100px;
-    font-size: 10pt;
+    font-size: 100%;
     flex-wrap: wrap-reverse;
     text-align: end;
     justify-content: space-between;
