--- a/Brandshop/style.css
+++ b/Brandshop/style.css
@@ -117,7 +117,7 @@ main img {
     padding: 1rem;
     margin: 1rem;
     flex: content;
-    background-image: url(assets/balckest_black.png);
+    background-image: url(https://htmlcolorcodes.com/assets/images/colors/black-color-solid-background-1920x1080.png);
     color: white;
 }
 
