--- a/style.css
+++ b/style.css
@@ -74,6 +74,12 @@ a {
     border-width: 2px;
     border-style: dashed;
 }
+.festival:hover {
+    color: #000094;
+    border-color: #149900;
+    border-width: 2px;
+    border-style: dashed;
+}
 
 .andere:hover {
     color: #000094;
