--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ footer {
 }
 
 .footer:hover {
-    color: #3e3e9f;
+    color: #353586;
     border-color: #149900;
     border-width: 2px;
     border-style: dashed;
