--- a/Festival/style.css
+++ b/Festival/style.css
@@ -1,4 +1,5 @@
 @import url("https://use.typekit.net/hfi1kak.css");
+@import url("https://use.typekit.net/mox8aly.css");
 
 :root {
     --bgc-01: #e6f1df;
@@ -18,6 +19,24 @@
     padding: 0;
 }
 
+h1{
+    color: var(--txt-04);
+    font-size: 20pt;
+    margin-bottom: 1%;
+    padding: 10px 20px;
+
+}
+h2{
+    color: var(--txt-04);
+    font-size: 12pt;
+    font-family: "calibri", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    padding-left:20px;
+    padding-bottom: 10px;
+
+}
+
 body {
     background-color: var(--bgc-01);
     color: var(--bgc-01);
@@ -30,6 +49,7 @@ header {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center; 
+    padding: 10%;
 }
 
 header a {
@@ -39,8 +59,8 @@ header a {
 }
 
 header nav li {
+    margin: 2%;
     display: inline;
-    justify-items: end;
     align-items: center;
 }
 
@@ -55,7 +75,23 @@ img {
     align-items: start;
 }
 
+#line-up img{
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    padding: 10px 20px;
+}
+
 .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    
+}
+figure {
+    position: relative;
+}
+
+figcaption {
+    position: absolute;
+    bottom: 12%;
+    left: 15%;
 }
