--- a/Festival/style.css
+++ b/Festival/style.css
@@ -19,20 +19,21 @@
     padding: 0;
 }
 
-h1{
+h1 {
     color: var(--txt-04);
     font-size: 20pt;
     margin-bottom: 1%;
     padding: 10px 20px;
 
 }
-h2{
+
+h2 {
     color: var(--txt-04);
     font-size: 12pt;
     font-family: "calibri", sans-serif;
     font-weight: 400;
     font-style: normal;
-    padding-left:20px;
+    padding-left: 20px;
     padding-bottom: 10px;
 
 }
@@ -48,7 +49,7 @@ header {
     background-color: var(--bgc-04);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    align-items: center; 
+    align-items: center;
     padding: 10%;
 }
 
@@ -75,7 +76,7 @@ img {
     align-items: start;
 }
 
-#line-up img{
+#line-up img {
     aspect-ratio: 1 / 1;
     object-fit: cover;
     padding: 10px 20px;
@@ -84,14 +85,22 @@ img {
 .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    
+
 }
+
 figure {
     position: relative;
+}
+
+span p{
+    background-color: #549df0;
+    opacity: 0%;
+    font-size: 20pt;
 }
 
 figcaption {
     position: absolute;
     bottom: 12%;
     left: 15%;
+    z-index: 1;
 }
