--- a/Festival/style.css
+++ b/Festival/style.css
@@ -76,6 +76,13 @@ img {
     align-items: start;
 }
 
+.Line-up {
+    color: var(--txt-04);
+    font-size: 430%;
+    padding: 10px;
+    margin: 10px 0px 27px 0;
+}
+
 #line-up img {
     aspect-ratio: 1 / 1;
     object-fit: cover;
@@ -85,7 +92,7 @@ img {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-
+    margin: 0 20px 0 20px;
 }
 
 figure {
@@ -102,9 +109,34 @@ figcaption {
 span {
     display: block;
     width: 100%;
-    padding: 2rem 0;
+    padding: 1rem 0;
     background-color: hsla(212, 84%, 64%, 0.5);
-    font-size: 20px;
     text-align: center;
     font-size: 300%;
+}
+
+footer{
+    background-color: var(--bgc-03);
+    text-align: center;
+}
+footer img{
+    justify-content: center;
+    width: 500px;
+    padding: 20px;
+    margin: 0px 0px 10px 0px;
+}
+footer i{
+    font-size: 50px;
+    margin: 10px 0 10px 0;
+}
+footer p{
+    font-size: 30px;
+    margin: 10px 0 10px 0;
+
+}
+.copyright{
+    font-family: "calibri", sans-serif;
+    font-size: 20px;
+    padding: 10px 0 10px 0;
+
 }
