--- a/Festival/style.css
+++ b/Festival/style.css
@@ -102,8 +102,8 @@ body a {
     padding: 10px;
 }
 i{
-    font-size: 200px;
-    column-count: 1;
+    font-size: 50px;
+    color: var(--txt-02);
 }
 
 .container {
