--- a/Festival/style.css
+++ b/Festival/style.css
@@ -60,7 +60,7 @@ header a {
 }
 
 header nav li {
-    margin: 2%;
+    padding: 2%;
     display: inline;
     align-items: center;
 }
@@ -98,18 +98,33 @@ body a {
     padding: 50px 0;
 }
 
-#AlecBenamain img {
+#AlecBenjamin img {
     padding: 10px;
 }
-i{
+
+#AlecBenjamin p {
+    padding: 0 20%;
+    padding-top: 8px;
+    font-size: 15px;
+}
+
+.icons {
     font-size: 50px;
     color: var(--txt-02);
-    justify-content: center;
+    text-align: center;
+    padding: 10% 0 0 0;
 }
 
 .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin: 0 20px 0 20px;
+}
+
+.container2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin: 0 20px 0 20px;
 }
