--- a/Festival/style.css
+++ b/Festival/style.css
@@ -114,6 +114,7 @@ body a {
     color: var(--txt-02);
     text-align: center;
     padding: 10% 0 0 0;
+    color: var(--txt-02);
 }
 
 .container {
