--- a/Festival/style.css
+++ b/Festival/style.css
@@ -114,7 +114,10 @@ body a {
     color: var(--txt-02);
     text-align: center;
     padding: 10% 0 0 0;
-    color: var(--txt-02);
+}
+
+.icons :hover{
+    color: var(--bgc-03);
 }
 
 .container {
