--- a/Festival/style.css
+++ b/Festival/style.css
@@ -29,13 +29,28 @@ h1 {
 
 h2 {
     color: var(--txt-04);
-    font-size: 12pt;
+    font-size: 20px;
     font-family: "calibri", sans-serif;
     font-weight: 400;
     font-style: normal;
-    padding-left: 0px;
     padding-bottom: 10px;
+}
 
+h3 {
+    color: var(--txt-04);
+    padding-bottom: 10px;
+    font-size: 40px;
+    font-family: "Segoe Print";
+    margin-left: 120px;
+    margin-bottom: -25px;
+}
+
+h4 {
+    color: var(--txt-04);
+    padding-bottom: 10px;
+    font-size: 30px;
+    font-family: "Segoe Print";
+    margin-left: 120px;
 }
 
 body {
