--- a/Festival/style.css
+++ b/Festival/style.css
@@ -53,7 +53,7 @@ h4 {
     margin-left: 120px;
 }
 
-h5{
+h5 {
     margin-left: 30px;
     font-size: 50px;
     color: #000000;
@@ -91,6 +91,14 @@ header img {
     margin: repeat(3, -30);
 }
 
+header input#burger {
+    display: none;
+}
+
+header label[for="burger"] {
+    display: none;
+}
+
 img {
     display: block;
     width: 100%;
@@ -99,6 +107,7 @@ img {
 
 body a {
     text-decoration: none;
+    cursor:wait;
 }
 
 .Line-up {
@@ -124,7 +133,7 @@ body a {
     padding: 10px;
 }
 
-a span{
+a span {
     color: var(--txt-01);
 }
 
@@ -224,3 +233,8 @@ footer p {
     padding: 10px 0 10px 0;
 
 }
+
+@media(width <=750px) {
+    header label[for="burger"] {
+        display: block;
+    }}
