--- a/Festival/style.css
+++ b/Festival/style.css
@@ -17,6 +17,7 @@
     margin: 0;
     box-sizing: border-box;
     padding: 0;
+    cursor: auto;
 }
 
 h1 {
@@ -101,7 +102,6 @@ header label[for="burger"] {
     top: 0;
     right: 0;
     display: none;
-    width: 100%;
     padding: 1rem 1ch;
     background-color: none;
     text-align: right;
@@ -110,7 +110,8 @@ header label[for="burger"] {
 
 header label[for="burger"] i {
     margin: 0;
-    font-size: 1.25rem;
+    font-size: 3rem;
+    color: var(--txt-01);
 }
 
 img {
@@ -248,9 +249,15 @@ footer p {
 
 }
 
-@media (max-width: 750px) {
+@media (width <=750px) {
     header label[for="burger"] {
         display: block;
+        margin: 30px 30px 0 0;
+    }
+
+    header {
+        display: flex;
+
     }
 
     #line-up .container {
