--- a/Festival/style.css
+++ b/Festival/style.css
@@ -17,7 +17,6 @@
     margin: 0;
     box-sizing: border-box;
     padding: 0;
-    cursor: auto;
 }
 
 h1 {
@@ -105,7 +104,7 @@ header label[for="burger"] {
     padding: 1rem 1ch;
     background-color: none;
     text-align: right;
-    cursor: var(--txt-02);
+    cursor: pointer;
 }
 
 header label[for="burger"] i {
@@ -122,7 +121,6 @@ img {
 
 body a {
     text-decoration: none;
-    cursor: wait;
 }
 
 .Line-up {
